--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="overlay">
+      <!-- This is where your blocklist or other UI elements can be rendered -->
+    </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
